# Nompy

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
nom/: combinators.py  utils.py
nompy/: combinators.py  modifiers.py  utils.py
tests/: test_combinators.py  test_modifiers.py  test_utils.py
