[project]
name = "nompy"
dynamic = ["version"]
description = "A python parser combinator library, similar to Nom for Rust"
authors = [{ name = "Harry Lees", email = "harry.lees@gmail.com" }]
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
dependencies = ["more-itertools>=10.2.0", "typing-extensions>=4.12.0"]

[dependency-groups]
dev = ["mypy>=1.15.0", "ruff>=0.11.9"]
test = ["coverage>=7.8.0", "pytest>=8.3.5"]

[project.urls]
Repository = "https://github.com/Harry-Lees/Nompy.git"
Issues = "https://github.com/Harry-Lees/Nompy/issues"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"
fallback-version = "0.0.0"
